--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 %}
+{% load bootstrap4 %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,36 +9,34 @@
 
 		<title>Learning Log</title>
 		{% bootstrap_css %}
-		{% bootstrap_javascript %}
+		{% bootstrap_javascript jquery="slim" %}
 	</head>
 	<body>
 		<!-- Static navbar-->
-		<nav class="navbar navbar-default navbar-static-top">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
 			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					</button>
-					<a href="{% url 'learning_logs:index' %}" class="navbar-brand">Learning Log</a>
-				</div>
-				<div id="navbar" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav">
-						<li><a href="{% url 'learning_logs:topics' %}">Topics</a></li>
+				<a href="{% url 'learning_logs:index' %}" class="navbar-brand">Learning Log</a>
+				<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div id="navbar" class="collapse navbar-collapse">
+					<ul class="navbar-nav">
+						<li class="nav-item"><a class="nav-link" href="{% url 'learning_logs:topics' %}">Topics</a></li>
 					</ul>
-					<ul class="nav navbar-nav navbar-right">
+					<ul class="navbar-nav ml-auto">
 						{% if user.is_authenticated %}
-							<li><a>Hello, {{ user.username }}.</a></li>
-							<li><a href="{% url 'users:logout' %}">Logout</a></li>
+							<li class="nav-item"><a class="nav-link">Hello, {{ user.username }}.</a></li>
+							<li class="nav-item"><a class="nav-link" href="{% url 'users:logout' %}">Logout</a></li>
 						{% else %}
-							<li><a href="{% url 'users:login' %}">Login</a></li>
-							<li><a href="{% url 'users:register' %}">Register</a></li>
+							<li class="nav-item"><a class="nav-link" href="{% url 'users:login' %}">Login</a></li>
+							<li class="nav-item"><a class="nav-link" href="{% url 'users:register' %}">Register</a></li>
 						{% endif %}
 					</ul>
 				</div><!-- /.nav-collapse -->
 			</div>
 		</nav>
-
 		<div class="container">
-			<div class="page-header">{% block header %}{% endblock header%}</div>
+			<div class="pb-2 mt-4 mb-2 border-bottom">{% block header %}{% endblock header%}</div>
 			<div>{% block content %}{% endblock content %}</div>
 		</div> <!-- /container -->
 	</body>
